input styling range color

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                     <h5>Color:</h5>
                     <input type="color" id="color">
                 </div>
-                <div class="tools-wrapper"> <h5> Background Color:</h5></div>
-                <input type="range" id="color-background">
+                <div class="tools-wrapper"> 
+                <h5> Background Color:</h5></div>
+                <input type="color" id="color-background">
                 
             </div>
         </div>
