font option was added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                 <input type="color" id="color-background">
                 
             </div>
+<select id="font-select">
+  <option value="Arial">A</option>
+  <option value="Verdana">Verdana</option>
+  <option value="Courier New">Courier New</option>
+  <option value="Times New Roman">Times New Roman</option>
+  <option value="Comic Sans MS">Comic Sans</option>
+</select>
+
         </div>
         <div class="tool-row">
             <button id="button-clear">Clear</button>
