--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="white.css">
 </head>
 <body>
+
     <div id="paintarea">
+        
+<button id="toggle-darkmode">🌙 Dark Mode</button>
         <canvas id="paint"></canvas>
     </div>
     <div class="options">
