undo redo button created

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 <div class="tools-wrapper"> 
                 <h5> Background Color:</h5></div>
                 <input type="color" id="color-background">
-                
+                <button id="button-undo">Undo</button>
+                <button id="button-redo">Redo</button>
+
                 
     <select id="font-select">
         <!-- font option are avilable --> are these 
