--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <h5><span id="tool-type"></span> Size: </h5>
                     <input type="range" id="pen-slidearea" value="4">
                 </div>
-
+               <!-- tool wrper container all button  -->
                 <div class="tools-wrapper">
                     <h5>Color:</h5>
                     <input type="color" id="color">
@@ -32,8 +32,7 @@
                 <input type="color" id="color-background">
                 <button id="button-undo">Undo</button>
                 <button id="button-redo">Redo</button>
-
-                
+                <!-- font box -->
     <select id="font-select">
         <!-- font option are avilable --> are these 
         <option value="Arial">Arial</option>
