--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="paintarea">
         <!-- canvas area  -->
-<button id="toggle-darkmode">🌙 Dark Mode</button>
+<button id="toggle-darkmode"> Dark Mode</button>
         <canvas id="paint"></canvas>
     </div>
     <div class="options">   
@@ -35,7 +35,7 @@
                 <button id="button-redo">Redo</button>
                 <!-- font box -->
     <select id="font-select">
-        <!-- font option are avilable --> are these 
+        <!-- font option are avilable are these  -->
         <option value="Arial">Arial</option>
         <option value="Verdana">Verdana</option>
         <option value="Courier New">Courier New</option>
